# stevie-platform

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
artifacts/calibration/: v1.2.json  v2-ablation.json  v2.json
artifacts/metrics/: v1.2.json  v2-ablation.json  v2.json
experiments/: M6_PLAN.md  M6_SLICE2_DESIGN.md  M7_PLAN.md  M7_SCOPING.md  PHASE2_SEARCH_DESIGN.md
experiments/entity_resolution/: COVERAGE_VALIDATION.md  LABELING_GUIDE.md  M0_DECISION_STORE_DESIGN.md  M6_RESULTS.md  ORG_RESOLUTION_v1.0.md  PHASE_E_DESIGN.md  ROUND1_REVIEW_AID.md  acronym_feasibility_2026-07-01.md  coverage_scan.sql  label.py  m2_sample.sql  (+2 more)
migrations/: 001_init.sql  002_canonical.sql  003_derived.sql  004_candidates.sql  005_timeline_trgm.sql  006_fetch_samples.sql  007_result_levels.sql  008_org_metadata.sql  009_merge_graph.sql  010_merge_candidates.sql  011_model_predictions.sql  012_model_registry.sql  013_model_calibration.sql  014_predictions_stable_key.sql  015_review_log.sql  016_fact_confidence.sql  017_recognition_confidence.sql  018_blog.sql  019_blog_slug_not_unique.sql  020_person_layer.sql  021_evidence_layer.sql  022_evidence_extraction_provenance.sql  023_evidence_source_tier.sql
scripts/: progress.sh  sampler.sh  watch.sh
tests/: test_active_learning.py  test_benchmark.py  test_blog.py  test_calibration.py  test_candidates.py  test_confidence.py  test_evidence.py  test_features.py  test_normalize.py  test_parse.py  test_people_extract.py  test_review.py  test_scorer.py  test_scorer_eval.py  test_split.py  test_split_v2.py
(+61 files in other folders)
