[project]
name = "stevie-platform"
version = "0.1.0"
description = "Historical Stevie Awards data acquisition + intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.44",
    "selectolax>=0.3.21",
    "psycopg[binary,pool]>=3.1",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "anthropic>=0.40",
    "trafilatura>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
stevie = "stevie_platform.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
